@@ -1529,6 +1529,7 @@ public class VertexImpl implements org.apache.tez.dag.app.dag.Vertex,
       Preconditions.checkState(vertexToBeReconfiguredByManager, "doneReconfiguringVertex() can be "
           + "invoked only after vertexReconfigurationPlanned() is invoked");
       this.vertexToBeReconfiguredByManager = false;
+      // TEZ-2015 VM may not have configured everything eg. input edge. maybeSendConfiguredEvent()
       if (completelyConfiguredSent.compareAndSet(false, true)) {
         // vertex already started and at that time this event was not sent. Send now.
         stateChangeNotifier.stateChanged(vertexId, new VertexStateUpdate(vertexName,
